idk what changed

--- a/_publications/mr01.md
+++ b/_publications/mr01.md
@@ -1,12 +1,15 @@
 ---
-layout: publication
+layout: pages/publication
 title: "Mixed Reality for Engineering Design Review Using Finite Element Analysis"
 authors: "Emran Poh, Kyrin Liong, and Jeannie Lee"
 venue: "2022 IEEE International Symposium on Mixed and Augmented Reality Adjunct (ISMAR-Adjunct)"
 year: 2022
-doi: "10.1109/ISMAR-Adjunct57072.2022.00256"
+doi: "10.1109/ISMAR-Adjunct60711.2023.00085"
 image: "loadtable_fea.png"
+permalink: /publications/mr01/
 tags:
+  - name: "HCI"
+    url: "/research/#hci"
   - name: "XR"
     url: "/research/#xr"
   - name: "Engineering"
