--- a/_publications/mr02.md
+++ b/_publications/mr02.md
@@ -1,12 +1,15 @@
 ---
-layout: publication
+layout: pages/publication
 title: "Mixed Reality for Mechanical Design and Assembly Planning"
 authors: "Emran Poh, Kyrin Liong, and Jeannie Lee"
-venue: "HCI International 2022–Late Breaking Posters"
+venue: "HCI International 2022–Late Breaking Posters: 24th International Conference on Human-Computer Interaction"
 year: 2022
 doi: "10.1007/978-3-031-19679-9_72"
 image: "mr4assembly.jpg"
+permalink: /publications/mr02/
 tags:
+  - name: "HCI"
+    url: "/research/#hci"
   - name: "XR"
     url: "/research/#xr"
   - name: "Manufacturing"
