--- a/_publications/mr01.md
+++ b/_publications/mr01.md
@@ -16,26 +16,4 @@ tags:
     url: "/research/#engineering"
 ---
 
-## Abstract
-
-This paper explores the use of mixed reality for engineering design review, specifically focusing on finite element analysis. We present a novel approach to visualizing and interacting with FEA results in mixed reality environments.
-
-## Introduction
-
-Engineering design review is a critical process that often involves complex data visualization and analysis. This paper examines how mixed reality can enhance this process by providing intuitive ways to interact with finite element analysis results.
-
-## Methodology
-
-Our research combines user-centered design methods with technical implementation to develop and evaluate a mixed reality system for engineering design review. We conducted user studies with engineering professionals to assess the effectiveness of our approach.
-
-## Results
-
-Our findings demonstrate that mixed reality can significantly improve the efficiency and effectiveness of engineering design review. We present several key insights and design recommendations for mixed reality applications in engineering contexts.
-
-## Discussion
-
-The implications of our research extend beyond engineering design review. We discuss broader applications of mixed reality in professional contexts and the future of human-computer interaction in technical domains.
-
-## Conclusion
-
-Mixed reality shows great promise for enhancing engineering design review processes. Our research provides a foundation for future work in this area and highlights the potential of mixed reality in professional applications. 
+Mixed Reality (MR) provides a unique environment for engineers to visualize a virtual CAD model's structural characteristics within a real physical environment. Existing implementations have explored conducting structural design reviews in virtual environments. However, more can be done to explore conducting virtual structural reviews on assemblies using MR. A MR-based application is developed, for engineers to conduct structural design reviews with support for complete assemblies and visualizing adjacent structural behaviors, using Finite Element Analysis (FEA). A preliminary evaluation study conducted an engineering design review with participants in either MR or on a conventional desktop computer, measuring the usability, sense of flow, and workload. The pilot study results suggest that MR is an intuitive platform with higher absorption of activity and flow experience, despite incurring a higher physical demand than the desktop environment. Based on the findings, we discuss the current potential and challenges faced when conducting design reviews within a MR environment, suggest improvements that can be made when designing MR-based engineering tools, and discuss the significant benefits that MR can offer over traditional desktop monitor based applications.
