--- a/_publications/mr02.md
+++ b/_publications/mr02.md
@@ -16,26 +16,4 @@ tags:
     url: "/research/#manufacturing"
 ---
 
-## Abstract
-
-This paper explores the application of mixed reality in mechanical design and assembly planning. We present a novel approach to using mixed reality for visualizing and planning mechanical assemblies, with a focus on improving efficiency and reducing errors.
-
-## Introduction
-
-Mechanical design and assembly planning are complex processes that often require careful consideration of spatial relationships and assembly sequences. This paper examines how mixed reality can enhance these processes by providing intuitive visualization and interaction capabilities.
-
-## Methodology
-
-Our research combines user-centered design methods with technical implementation to develop and evaluate a mixed reality system for mechanical design and assembly planning. We conducted user studies with mechanical engineers and assembly technicians to assess the effectiveness of our approach.
-
-## Results
-
-Our findings demonstrate that mixed reality can significantly improve the efficiency and accuracy of mechanical design and assembly planning. We present several key insights and design recommendations for mixed reality applications in manufacturing contexts.
-
-## Discussion
-
-The implications of our research extend beyond mechanical design and assembly planning. We discuss broader applications of mixed reality in manufacturing and the future of human-computer interaction in industrial contexts.
-
-## Conclusion
-
-Mixed reality shows great promise for enhancing mechanical design and assembly planning processes. Our research provides a foundation for future work in this area and highlights the potential of mixed reality in manufacturing applications. 
+Design for Manufacturing and Assembly (DFMA) is a crucial design stage within the heavy vehicle manufacturing process that involves optimising the order and feasibility of the parts assembly process to reduce manufacturing complexity and overall cost. Existing work has focused on conducting DFMA within virtual environments to reduce manufacturing costs, but users are less able to relate and compare physical characteristics of a virtual component with real physical objects. Therefore, a Mixed Reality (MR) application is developed for engineers to visualise and manipulate assembly parts virtually, conduct and plan out an assembly within its intended physical environment. Two pilot evaluations were conducted with both engineering professionals and non-engineers to assess effectiveness of the software for assembly planning. Usability results suggest that the application is overall usable (M=56.1, SD=7.89), and participants felt a sense of involvement in the activity (M=13.1, SD=3.3). Engineering professionals see the application as a useful and cost-effective tool for optimising their mechanical assembly designs.
