--- a/_publications/mr03.md
+++ b/_publications/mr03.md
@@ -16,26 +16,4 @@ tags:
     url: "/research/#engineering"
 ---
 
-## Abstract
-
-This paper presents a novel mixed reality interface for load application in finite element analysis. We explore how mixed reality can enhance the process of applying and visualizing loads in engineering simulations.
-
-## Introduction
-
-Finite element analysis is a critical tool in engineering design, but the process of applying loads can be complex and error-prone. This paper examines how mixed reality can improve this process by providing intuitive ways to specify and visualize loads.
-
-## Methodology
-
-Our research combines user-centered design methods with technical implementation to develop and evaluate a mixed reality interface for load application. We conducted user studies with engineering professionals to assess the effectiveness of our approach.
-
-## Results
-
-Our findings demonstrate that mixed reality can significantly improve the efficiency and accuracy of load application in finite element analysis. We present several key insights and design recommendations for mixed reality applications in engineering simulation.
-
-## Discussion
-
-The implications of our research extend beyond load application in finite element analysis. We discuss broader applications of mixed reality in engineering simulation and the future of human-computer interaction in technical domains.
-
-## Conclusion
-
-Mixed reality shows great promise for enhancing the process of load application in finite element analysis. Our research provides a foundation for future work in this area and highlights the potential of mixed reality in engineering applications. 
+Finite Element Analysis (FEA) is an integral process in manufacturing design, providing assurance of quality and structural integrity of a manufactured item. FEA involves conducting rigorous stress simulations on a designed model to study its structural behaviour when under specific loading scenarios. Current FEA tools involve viewing and manipulating the 3D model displayed on a monitor screen. A Mixed Reality (MR) user interface allowing for direct manipulation and specification of loading scenarios on a designed model was developed, thus enabling design engineers to find new ways of interacting and visualising FEA results for analysis and thus reducing unnecessary prototyping costs. Three gesture interfaces were developed to allow application of load parameters on a surface of a model, namely: Point-Apply, Point-Hold, and Point-Drag. A pilot evaluation was conducted to study the suitability of each as an interface designed for engineers. Results suggest that Point-Hold is empirically the most usable interface compared to the other interfaces.
