another big push

--- a/content/projects/xr01.md
+++ b/content/projects/xr01.md
@@ -1,5 +1,5 @@
 ---
-layout: pages/project
+layout: default
 title: "How to Use XR for Physical Assault"
 subtitle: "A Less-than-Optimistic Commentary on 'The Ethics of Realism in Virtual and Augmented Reality' through Netflix's Black Mirror"
 image: "xr-assault.jpg"
