--- a/_publications/mr01.md
+++ b/_publications/mr01.md
@@ -3,6 +3,7 @@ layout: pages/publication
 title: "Mixed Reality for Engineering Design Review Using Finite Element Analysis"
 authors: "Emran Poh, Kyrin Liong, and Jeannie Lee"
 venue: "2022 IEEE International Symposium on Mixed and Augmented Reality Adjunct (ISMAR-Adjunct)"
+venue_short: "NewRIIS"
 year: 2022
 doi: "10.1109/ISMAR-Adjunct60711.2023.00085"
 image: "loadtable_fea.png"
