--- a/_publications/mr02.md
+++ b/_publications/mr02.md
@@ -3,6 +3,7 @@ layout: pages/publication
 title: "Mixed Reality for Mechanical Design and Assembly Planning"
 authors: "Emran Poh, Kyrin Liong, and Jeannie Lee"
 venue: "HCI International 2022–Late Breaking Posters: 24th International Conference on Human-Computer Interaction"
+venue_short: "HCII"
 year: 2022
 doi: "10.1007/978-3-031-19679-9_72"
 image: "mr4assembly.jpg"
