--- a/_publications/mr03.md
+++ b/_publications/mr03.md
@@ -3,6 +3,7 @@ layout: pages/publication
 title: "Mixed Reality Interface for Load Application in Finite Element Analysis"
 authors: "Emran Poh, Kyrin Liong, and Jeannie Lee"
 venue: "Innovations in Social Computing and Digital Transformation, International Conference on Human-Computer Interaction 2021"
+venue_short: "HCII"
 year: 2021
 doi: "10.1007/978-3-030-77626-8_32"
 image: "mr4fea.PNG"
